<resources>
    <string name="app_name">AllUniver</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string-array name="setting_typeOfWeek">
        <item>Числитель</item>
        <item>Знаменатель</item>
    </string-array>

    <!--BaseActivity-->
    <string name="baseActivity_dayOfWeek_monday">Понедельник</string>
    <string name="baseActivity_dayOfWeek_tuesday">Вторник</string>
    <string name="baseActivity_dayOfWeek_wednesday">Среда</string>
    <string name="baseActivity_dayOfWeek_thursday">Четверг</string>
    <string name="baseActivity_dayOfWeek_friday">Пятница</string>
    <string name="baseActivity_dayOfWeek_saturday">Суббота</string>
    <string name="baseActivity_dayOfWeek_sunday">Воскресенье</string>
    <string name="baseActivity_auth_error">Авторизация прошла неудачно.</string>
    <string name="baseActivity_typeOfWeek_Cheslitel">Числитель</string>
    <string name="baseActivity_typeOfWeek_Znamenatel">Знаменатель</string>
    <string name="baseActivity_typeOfWeek_AllWeek">Каждая неделя</string>
    <string name="baseActivity_share_message">Очень легкое приложение для хранения вашего студенческого расписания.\nhttps://play.google.com/store/apps/details?id=ruslep.student_schedule</string>
    <string name="baseActivity_share_header">AllUniver</string>
    <string name="baseActivity_Schedule_error">Ошибка. Нет соединения с интернетом или проблемы на сервере.</string>
    <string name="baseActivity_Schedule_needAuth">Для начала работы нужно авторизироваться.</string>
    <string name="baseActivity_getSchedule_compl">Загрузка завершена.</string>
    <string name="baseActivity_setSchedule_compl">Сохранение завершено.</string>
    <string name="baseActivity_registerSchedule_error">Ошибка регистрации.</string>
    <string name="baseActivity_registerSchedule_cancel">Регистрация отменена.</string>
    <string name="baseActivity_registerSchedule_succefful">Вы успешно зарегистрировались.</string>
    <string name="baseActivity_registerSchedule_inetError">Ошибка соединения с интернетом.</string>




    <!--Dialog add-->
    <string name="dialogAdd_timeStart">Начало</string>
    <string name="dialogAdd_timeEnd">Конец</string>
    <string-array name="dialogAdd_typeOfWeek">
        <item>Числитель</item>
        <item>Знаменатель</item>
        <item>Каждая неделя</item>
    </string-array>
    <string name="dialogAdd_btn_OK">ДОБАВИТЬ</string>
    <string name="dialogAdd_btn_Cancel">ОТМЕНА</string>
    <string name="dialogAdd_txtSubjectNumber">№ занятия:</string>
    <string name="dialogAdd_txtSubjectName">Название предмета:</string>
    <string name="dialogAdd_txtTypeSubject">Тип занятия:</string>
    <string name="dialogAdd_txtSubjectTeacher">Имя преподавателя:</string>
    <string name="dialogAdd_txtSubjectRoom">Аудитория:</string>
    <string name="dialogAdd_txtTime">Время:</string>
    <string name="dialogAdd_txtTypeOfWeek">Тип недели:</string>
    <string name="dialogAdd_check_error">Вы не ввели номер предмета или его название.</string>
    <string name="dialogAdd_check_error_ok">OK</string>

    <!--Dialog edit-->
    <string name="dialogEdit_btn_Save">СОХРАНИТЬ</string>

    <!--Time dialog-->
    <string name="dialogTime_btn_Ok">OK</string>
    <string name="dialogTime_btn_Cancel">ОТМЕНА</string>

    <!--Fragment schedule-->
    <string name="fragmentSchedule_alertDialog_message">Вы действительно хотите удалить это занятие?</string>
    <string name="fragmentSchedule_alertDialog_OK">OK</string>
    <string name="fragmentSchedule_alertDialog_Cancel">ОТМЕНА</string>
    <string name="fragmentSchedule_no_lessons">Нет\nзанятий</string>

    <!--Drawer menu-->
    <string name="navigation_drawer_open">Открыть панель навигации</string>
    <string name="navigation_drawer_close">Закрыть панель навигации</string>
    <string name="navigation_drawer_log_in">Авторизироваться</string>
    <string name="navigation_drawer_save">Сохранить на сервер</string>
    <string name="navigation_drawer_load">Загрузить с сервера</string>
    <string name="navigation_drawer_friends">Мои контакты</string>
    <string name="navigation_drawer_share">Поделится</string>
    <string name="navigation_drawer_review">Оставить отзыв</string>
    <string name="navigation_drawer_setting">Настройки</string>
    <string name="navigation_drawer_exit">Выйти</string>
    <string name="navigation_drawer_myNumber">Ваш номер:</string>
    <string name="navigation_drawer_not_auth">Нужна авторизация</string>

    <!--Popup menu-->
    <string name="popup_menu_edit_subject">Изменить</string>
    <string name="popup_menu_copy_subject">Копировать</string>
    <string name="popup_menu_delete_subject">Удалить</string>

    <!--Quick enter dialog-->
    <string name="quick_enter_clear">ОЧИСТИТЬ</string>
    <string name="quick_enter_cancel">ОТМЕНА</string>

    <!--Contacts-->
    <string name="contacts">Мои контакты</string>
    <string name="contacts_last_update">Последнее обновление: </string>
    <string name="contacts_enter">Открыть</string>

    <!--User-->
    <string name="user_dialog_download">Вы действительно хотите заменить свое расписание?</string>
    <string name="user_dialog_OK">Заменить</string>
    <string name="user_dialog_NO">Отмена</string>
    <string name="user_dialog_sucefull">Теперь у вас такое же расписание.</string>
    <string name="user_message_error">Расписание защищено настройками приватности или проблемы с сетью.</string>

    <!--Setting-->
    <string name="setting">Настройки</string>
    <string name="setting_typeOfWeek">Тип недели:</string>
    <string name="setting_cheslitel">Числитель</string>
    <string name="setting_znamenatek">Знаменатель</string>
    <string name="setting_mainColor">Выберите основной цвет программы:</string>
    <string name="setting_politics">Политика конфиденциальности</string>
    <string name="setting_shudow">Скрыть расписание от друзей</string>
    <string name="setting_button_exit">Выйти</string>
    <string name="setting_button_delete">Удалить все расписание</string>
    <string name="setting_button_deleteAuth">Удалить учетную запись</string>
    <string name="setting_dialog_exit">Вы действительно хотите выйти со своего аккаунта?</string>
    <string name="setting_dialog_delete">Вы действительно хотите удалить все расписание?</string>
    <string name="setting_dialog_deleteAuth">Вы действительно хотите удалить Учетную запись?</string>
    <string name="setting_dialog_hideSchedule">Для того что бы настройки скрытности начали действовать, нужно повторно сохранить расписание.</string>
    <string name="setting_dialog_hideSchedule_ok">OK</string>
    <string name="setting_dialog_enter">Вы успешно вышли с аккаунта.</string>
    <string name="setting_dialog_enterSchedule">Вы успешно удалили все расписания с телефона.</string>
    <string name="setting_dialog_errorAuth">Ошибка удаления учетной записи.</string>
    <string name="setting_dialog_succesAuth">Вы успешно удалили учетную запись.</string>
    <string name="setting_dialog_OK">Выйти</string>
    <string name="setting_dialog_delete_ok">Удалить</string>
    <string name="setting_dialog_NO">Отмена</string>
    <string name="setting_auth">Нужна авторизация</string>

</resources>
