<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:id="@+id/first_section" android:checkableBehavior="single">
        <item
            android:id="@+id/nav_enter"
            android:icon="@drawable/ic_assignment_ind_black_24px"
            android:title="@string/navigation_drawer_log_in" />
        <item
            android:id="@+id/nav_save"
            android:icon="@drawable/ic_cloud_upload_black_24px"
            android:title="@string/navigation_drawer_save" />
        <item
            android:id="@+id/nav_load"
            android:icon="@drawable/ic_cloud_download_black_24px"
            android:title="@string/navigation_drawer_load" />
        <item
            android:id="@+id/nav_friends"
            android:icon="@drawable/ic_people_black_24px"
            android:title="@string/navigation_drawer_friends" />
    </group>

    <group android:id="@+id/second_section" android:checkableBehavior="single">
             <item
                android:id="@+id/nav_setting"
                android:icon="@drawable/ic_settings_black_24px"
                android:title="@string/navigation_drawer_setting" />
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_share_black_24px"
                android:title="@string/navigation_drawer_share" />
            <item
                android:id="@+id/nav_review"
                android:icon="@drawable/ic_rate_review_black_24px"
                android:title="@string/navigation_drawer_review" />
    </group>

</menu>
